--- a/JQuery-Elzero/index.html
+++ b/JQuery-Elzero/index.html
@@ -17,6 +17,10 @@
     <div>this main Div</div>
     <p>i am Paragraph </p>
     <span>i am Span </span>
+    <br>
+    <div class="open">click here</div>
+    <div class="box">this is box</div>
+    <div class="anim"> Animate Div </div>
     <script src="src/js/jquery-3.6.0.min.js"></script>
     <script src="src/js/my-jquery.js"></script>
 </body>
